--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2139,9 +2139,9 @@ h1, h2, h3, h4, h5, h6 {
   #mobile-nav-toggle {
     display: inline;
   }
-  #nav-menu-container {
+  /* #nav-menu-container {
     display: none;
-  }
+  } */
 }
 
 /* Mobile Nav Styling */
